methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean = false
  var colonne:Int = 0
  while (!vuBiscuit && colonne < 7) {
    vuBiscuit = estSurBiscuit()
    for(compteur <- 1 to 6) {
    	avance()
      vuBiscuit = estSurBiscuit()
    recule(6)
    droite()
    avance()
    colonne = colonne +1
    gauche()
    }
  } 
}
